tests/NormalTests/paczka1/small_fuzzy/39079303.err
Error in line 6: Tr1qdwL S11 89,7
Error in line 7: iqQX S3 23,4
Error in line 13: S350 A417 45,3
